fix: shift active

--- a/style.css
+++ b/style.css
@@ -77,7 +77,6 @@ textarea::-webkit-input-placeholder {
 
 .button:active {
   background-color: rgb(250, 250, 250);
-  box-shadow: 0 0 8px inset rgba(10,10,10,0.5);
 }
 
 .active {
